Modeling Notebook Solutions completed

--- a/Spring_2022_Kaggle/Current/Kaggle_Modeling_sols.ipynb
+++ b/Spring_2022_Kaggle/Current/Kaggle_Modeling_sols.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9c47ef14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +12,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af9a1f3b",
    "metadata": {},
    "source": [
     "# CX Kaggle Competition: Salary Prediction\n",
@@ -31,7 +29,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c62b97eb",
    "metadata": {},
    "source": [
     "# Modeling\n",
@@ -48,7 +45,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "258b4c2c",
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +361,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b70fe9ca",
    "metadata": {},
    "source": [
     "#### One Hot Encoding (OPTIONAL)\n",
@@ -378,7 +373,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0aa71b56",
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +399,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e494ae90",
    "metadata": {},
    "source": [
     "<span id=\"validation\"></span>\n",
@@ -417,10 +410,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "9b99a614",
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/sarangmdeshpande/opt/anaconda3/lib/python3.8/site-packages/scipy/__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.23.1\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'X_train' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/wj/qw9ln4ws7vs8bpjdvq82gmjh0000gn/T/ipykernel_33385/2303336983.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel_selection\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_val\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_val\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrandom_state\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m42\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'X_train' is not defined"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "X_train, X_val, y_train, y_val = train_test_split(X_train, y_train, test_size=0.2, random_state=42)"
@@ -428,7 +440,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fa43601",
    "metadata": {},
    "source": [
     "#### K-Fold Cross Validation\n",
@@ -440,8 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "3fb0c7e9",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +462,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0965620a",
    "metadata": {},
    "source": [
     "<span id=\"rmse\"></span>\n",
@@ -469,7 +478,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "330964b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +488,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "546bcb8f",
    "metadata": {},
    "source": [
     "<span id=\"models\"></span>\n",
@@ -499,7 +506,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c9dc0c81",
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +532,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6f6f4afc",
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +556,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "9428b3c8",
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +579,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1f1b319",
    "metadata": {},
    "source": [
     "### Random Forests\n",
@@ -588,7 +591,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "eaba9192",
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +613,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "5351fd59",
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +634,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "083b83ba",
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +654,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a7afbb1",
    "metadata": {},
    "source": [
     "Looks like a case of overfitting since the training error >> validation error. Random forests / decision trees are notorious for overfitting as well due to how much they fit to the training data, but we can tune different parameters such as ```max_depth``` or ```n_estimators``` in order to increase bias and improve the model's predictive ability.\n",
@@ -664,7 +663,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee5b3552",
    "metadata": {},
    "source": [
     "### Logistic Regression\n",
@@ -674,7 +672,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be80cb71",
    "metadata": {},
    "source": [
     "### Ridge Regression\n",
@@ -685,7 +682,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "e4088b0e",
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +709,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8cc3c89",
    "metadata": {},
    "source": [
     "**Question 8:** Do you notice a difference between the Ridge Regression model and the Linear Regression one? Does changing the regularization parameter increase or decrease accuracy? What does this tell you about the data?"
@@ -721,7 +716,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fa6d097",
    "metadata": {},
    "source": [
     "**Answer:** There isn't much difference between the two models. Regularization is supposed to penalize larger weights such that one feature doesn't take up all the predicting power, so increasing ```alpha``` should reduce the variance, but the accuracy still doesn't seem to be any better than the Linear Regression model. This shows that our data doesn't suffer much from multicollinearity, and therefore a Ridge Regression model probably isn't the best choice."
@@ -729,7 +723,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7baf52a",
    "metadata": {},
    "source": [
     "### Support Vector Regression (OPTIONAL)\n",
@@ -744,7 +737,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "c6bf1b13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,7 +747,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "db5cdf10",
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +767,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "b88cb4bb",
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +788,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "053e69f4",
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +808,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1be1dfcb",
    "metadata": {},
    "source": [
     "### Neural Networks (OPTIONAL)\n",
@@ -832,7 +820,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "acb4091b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -842,7 +829,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4a66150",
    "metadata": {},
    "source": [
     "### Your Own Model\n",
@@ -852,7 +838,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b3adbe4",
    "metadata": {},
    "source": [
     "<span id=\"submission\"></span>\n",
@@ -865,7 +850,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "cee82d31",
    "metadata": {},
    "outputs": [
     {
@@ -1180,7 +1164,6 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "6b2f45f9",
    "metadata": {},
    "outputs": [
     {
@@ -1201,7 +1184,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bcc04b1",
    "metadata": {},
    "source": [
     "Run the below cells to save your predicted test values."
@@ -1210,7 +1192,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "720a5585",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1226,7 +1207,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "d0354c3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1236,7 +1216,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1250,7 +1230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
