made additional changes to advanced distributions workshop

--- a/DS_Workshops/Advanced_Distributions/Advanced Distributions.ipynb
+++ b/DS_Workshops/Advanced_Distributions/Advanced Distributions.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a64f6e98",
+   "id": "25bfa9c5",
    "metadata": {},
    "source": [
     "## Table of Contents\n",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "83032e6d",
    "metadata": {},
    "outputs": [],
@@ -86,6 +86,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6ce6253c",
+   "metadata": {},
+   "source": [
+    "#### Survival Function\n",
+    "The complement of the CDF is the CCDF, or survival function. This function describes $P(X > x)$, and is defined as $$P(X>x) = 1 - F_X(x)$$\n",
+    "\n",
+    "This characterization is especially relevant when discuss exponential random variables."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "06a1ed3e",
    "metadata": {
     "slideshow": {
@@ -118,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd414286",
+   "id": "c0eeff9f",
    "metadata": {},
    "source": [
     "<a id='normal'></a>\n",
@@ -126,7 +137,7 @@
     "Let's start by exploring the normal distribution. As you know, the normal distribution is used in a wide variety of statistics applications. \n",
     "### Normal Distribution PDF\n",
     "\n",
-    "A random variable X that follows a $Normal(\\mu, \\sigma)$ distribution with mean $\\mu$ and standard deviation $\\sigma$ has the following probability density function (PDF):  \n",
+    "A random variable X that follows a $\\mathcal{N}(\\mu, \\sigma^2)$ distribution with mean $\\mu$ and variance $\\sigma^2$ has the following probability density function (PDF):  \n",
     "\n",
     "$$  \n",
     "f_X(x) ~ = ~ \\frac{1}{\\sigma\\sqrt{2\\pi}}e^{-\\frac{1}{2}(\\frac{x-\\mu}{\\sigma})^2}\n",
@@ -142,9 +153,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "96bf9f42",
+   "id": "8e74877a",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -176,11 +187,83 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6d2645cf",
+   "metadata": {},
+   "source": [
+    "One convenient characteristic of the normal distribution is the 68 - 95 - 99.7 rule.\n",
+    "<img src='AdvancedDistributionsImages/68-95-997-rule.png' width=500px>  \n",
+    "Let's test out this rule on the standard normal distribution. \n",
+    "\n",
+    "`stats.norm(mu,sigma).cdf(x)` will give you the CDF of x where all x are follow a normal distribution with mean of $\\mu$ and standard deviation of $\\sigma$. Note that the function takes in the standard deviation $\\sigma$, not variance $\\sigma^2$. A CDF is the the probability that x is less than or equal to a value, or $P(X \\leq x)$ for any random variable $X$.\n",
+    "\n",
+    "What are the parameters for a standard normal distribution? Mean of 0 and standard deviation of 1.<br>\n",
+    "What does it mean when I type in `stats.norm(0,1).cdf(0)`? What should the answer be?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "18233f71",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Guess what the below cell should return!\n",
+    "stats.norm(0,1).cdf(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6eff1480",
+   "metadata": {},
+   "source": [
+    "Now, let's test out the 68-95-99.7 rule:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "be4b5bc6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probability that X is one standard deviation away from the mean: 0.6826894921370859\n",
+      "Probability that X is two standard deviations away from the mean: 0.9544997361036416\n",
+      "Probability that X is three standard deviations away from the mean: 0.9973002039367398\n"
+     ]
+    }
+   ],
+   "source": [
+    "prob_one_sd_away = stats.norm(0,1).cdf(1) - stats.norm(0, 1).cdf(-1)\n",
+    "prob_two_sd_away = stats.norm(0,1).cdf(2) - stats.norm(0, 1).cdf(-2)\n",
+    "prob_three_sd_away = stats.norm(0,1).cdf(3) - stats.norm(0, 1).cdf(-3)\n",
+    "\n",
+    "print(f\"Probability that X is one standard deviation away from the mean: {prob_one_sd_away}\")\n",
+    "print(f\"Probability that X is two standard deviations away from the mean: {prob_two_sd_away}\")\n",
+    "print(f\"Probability that X is three standard deviations away from the mean: {prob_three_sd_away}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a4566971",
    "metadata": {},
    "source": [
     "<a id='t'></a>\n",
     "## Student's $t$-distribution\n",
+    "### Overview\n",
     "The Student's $t$-distribution ($t$-distribution) is used when estimating the mean of a normally distributed population when the sample size is small and population standard deviation is unknown. You may have used it before to conduct a $t$-test to assess the statistical significance between two sample means or to construct confidence intervals of the difference between two population means.  \n",
     "\n",
     "The $t$-distribution can be seen as a more conservative form of the normal distribution in putting more weight on the tails and less weight on the mean:\n",
@@ -210,6 +293,7 @@
    "id": "12154090",
    "metadata": {},
    "source": [
+    "### $t$-distribution vs Normal distribution\n",
     "Let's explore the relationship between the $t$-distribution and the normal distribution further. We mentioned earlier that the $t$-distribution is used when the population is normally distributed and our sample size is small. The variance of the distribution is dependent on the degrees of freedom $n-1$. What if our sample size increases?  \n",
     "To explore, we will make use of the scipy's $t$-distribution PDF: **stats.t.pdf(x, df, loc=0, scale=1)**. x is the value we're interested in PDF $f_X(x)$, df is the degrees of freedom, loc is our shift, and scale is how much we want to scale the distribution."
    ]
@@ -253,7 +337,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33194283",
+   "id": "0757c64b",
    "metadata": {},
    "source": [
     "<a id='gamma'></a>\n",
@@ -286,7 +370,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bdb04f0",
+   "id": "9a93779d",
    "metadata": {},
    "source": [
     "### Gamma Distribution Parameters\n",
@@ -302,7 +386,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b678c3ec",
+   "id": "165aad28",
    "metadata": {},
    "source": [
     "### Expectation and Variance:\n",
@@ -315,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "42ab0d92",
+   "id": "203bbe7c",
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "67cf376d",
+   "id": "654500dd",
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +466,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "530d2765",
+   "id": "f2861478",
    "metadata": {},
    "source": [
     "### Special Cases of the Gamma Distribution\n",
@@ -420,6 +504,10 @@
    "source": [
     "<a id='poiss'></a>\n",
     "### Poisson Distribution\n",
+    "#### Overview\n",
+    "Poisson random variables describe the probability of an event happening a certain number of times within a time period or space. The rate at which events occur must be constant, and one event's occurrence cannot impact another event's occurrence: the events must be independent. Typically, the time period or space is very large, and the probability is very low. \n",
+    "\n",
+    "#### PMF\n",
     "The Poisson random variable $X \\sim Poisson(\\lambda)$ is a discrete random variable with parameter $\\lambda$ and PMF  \n",
     "$$p_{X}(k) = e^{-\\lambda} \\frac{\\lambda^k}{k!}$$ with $k = 0, 1, 2, ...$. The paramater $\\lambda$ can be seen as the mean number of events that occur. A Poisson is essentially a binomial random variable with a very large $n$ and very small $p$.  \n",
     "\n",
@@ -428,6 +516,7 @@
     "In particular, the Poisson PMF with parameter $\\lambda$ is a good approximation of a binomial random random variable with parameters $n$ and $p$:  \n",
     "$$e^{-\\lambda} \\frac{\\lambda^k}{k!} \\approx \\binom{n}{k} p^k (1-p)^{n-k}$$ assuming $\\lambda = np$.  \n",
     "\n",
+    "#### Expectation and Variance:\n",
     "For $X \\sim Poisson(\\lambda)$,  \n",
     "$$\\mathbb{E}[X] = \\lambda$$ \n",
     "$$Var(X) = \\lambda$$ "
@@ -526,6 +615,11 @@
    "source": [
     "<a id='expo'></a>\n",
     "### Exponential Distribution\n",
+    "\n",
+    "#### Overview\n",
+    "Exponential distributions typically describe the waiting time for a single event to occur, so it is analogous to the Geometric Distribution for discrete random variables.  \n",
+    "\n",
+    "#### PDF, CDF,  and Survival Function\n",
     "The exponential random variable is continuous which has a PDF of  \n",
     "$$ f_X(x) =   \\left\\{\n",
     "\\begin{array}{ll}\n",
@@ -533,7 +627,11 @@
     "      0, & otherwise\n",
     "\\end{array} \n",
     "\\right.  $$\n",
-    "The exponential distribution typically describes the waiting time for a single arrival, so it is analogous to the Geometric Distribution for discrete random variables.  \n",
+    "\n",
+    "The CDF is \n",
+    "$$F_X(x) = {1-e^{-\\lambda x}}$$\n",
+    "Therefore, the CCDF or survival function is $$e^{-\\lambda x}$$\n",
+    "\n",
     "\n",
     "**Example**: Let $X$ be the wait time for the next bus to arrive, and the bus always seems to arrive in 12 minutes on average. Since time is continuous and we are describing a wait time, $X \\sim Expo(\\frac{1}{12})$ where $\\lambda=\\frac{1}{12}$ is the rate parameter because the bus arrives in 12 minutes on average.  \n",
     "\n",
@@ -555,7 +653,7 @@
     "**Memoryless Property**:\n",
     "One key property of the Exponential is that it is memoryless (so is Geometric)! Now what does that mean? Let's put it mathematically first, for $X \\sim Exponential(\\lambda)$:\n",
     "$$P(X > t + s | X > t) = P(X > s)$$\n",
-    "Taking a look at the conditional part of the probability, we know that we will take more than time $t$ for the arrival/some event to occur. The probability that it will take more than $t+s$ time to occur is the same probability that it will take greater than $s$ time to occur. In essence, we \"forgot\" about the fact that more than $t$ time has already passed - it is as if we started from the beginning again! That is why it is referred to as the memoryless property.  \n",
+    "Taking a look at the conditional part of the probability, we know that we will take more than time $t$ for the arrival/some event to occur. The probability that it will take more than $t+s$ time to occur (survival probability) is the same probability that it will take greater than $s$ time to occur. In essence, we \"forgot\" about the fact that more than $t$ time has already passed - it is as if we started from the beginning again! That is why it is referred to as the memoryless property.  \n",
     "\n",
     "We can use scipy's **stats.expon.pdf(x, loc=0, scale=1)** to find the PDF of an exponential distribution. Similar to before, x is is the value we are interested in, or the small $x$ in $f_X(x)$. loc is how much we want to shift by. Scale represents $\\frac{1}{\\lambda}$, and it is how much we scale the exponential distribution by."
    ]
@@ -596,7 +694,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "107ed62c",
+   "id": "196aaede",
    "metadata": {},
    "source": [
     "The CDF function for the exponential is very similar: **stats.expon.cdf(x, loc=0, scale=1)**"
@@ -696,10 +794,13 @@
    "source": [
     "<a id='erlang'></a>\n",
     "### Erlang Distribution\n",
+    "#### Overview\n",
     "We know that the sample interarrival times $S_i$ are distributed according to $Exp(\\lambda)$, but what are the distributions of the the arrival times $T_k$? First, note that each $T_k$ is a sum of the i.i.d. $Expo(\\lambda)$ random variables. The sum of the i.i.d. exponential random variables results in the Erlang distribution, denoted $Erlang(k;\\lambda)$.  \n",
     "\n",
+    "#### PDF and CDF\n",
     "If we let $T_k$ be the arrival time for the $k$th arrival for a Poisson process $PP(\\lambda)$, then the PDF for an Erlang distribution is\n",
     "$$f_{T_k}(t) = \\frac{\\lambda^k t^{k-1} e^{-\\lambda t}}{(k-1)!}$$\n",
+    "The CDF is \n",
     "\n",
     "#### Expectation and Variance:\n",
     "For $X \\sim Erlang(k;\\lambda)$,\n",
@@ -710,7 +811,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "917cd3d4",
+   "id": "f3db4db0",
    "metadata": {},
    "source": [
     "Scipy's PDF function for the Erlang distribution is **stats.erlang.pdf(x, a, loc=0, scale=1)**. x is the the arrival time (t in our PDF above) and a is which arrival we're interested in (kth arrival; k in our PDF above). loc and scale are the same as before: loc is how much we are shifting by and scale =$\\frac{1}{\\lambda}$."
@@ -804,7 +905,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79709685",
+   "id": "95c868c0",
    "metadata": {},
    "source": [
     "<a id='chi'></a>\n",
@@ -841,7 +942,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ac2950b1",
+   "id": "b587eeeb",
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +975,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e97f74f0",
+   "id": "e7dacaa9",
    "metadata": {},
    "source": [
     "<a id='beta'></a>\n",
@@ -911,7 +1012,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5932ade0",
+   "id": "e670c27b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -932,7 +1033,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10ef0253",
+   "id": "bed73046",
    "metadata": {},
    "outputs": [],
    "source": [
