--- a/Fall_2022_Lectures/Lecture_5/Probability for Data Science Lecture.ipynb
+++ b/Fall_2022_Lectures/Lecture_5/Probability for Data Science Lecture.ipynb
@@ -1079,19 +1079,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "521ff40e",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.5"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'stats' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Guess what the below cell should return!\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mstats\u001b[49m\u001b[38;5;241m.\u001b[39mnorm(\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m.\u001b[39mcdf(\u001b[38;5;241m0\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'stats' is not defined"
+     ]
     }
    ],
    "source": [
