--- a/Fall_2022_Kaggle/Kaggle_EDA/Kaggle_EDA_sols.ipynb
+++ b/Fall_2022_Kaggle/Kaggle_EDA/Kaggle_EDA_sols.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -261,7 +261,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 265,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
        "(1500, 21)"
       ]
      },
-     "execution_count": 266,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +572,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 267,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
        "array([ 1.,  2.,  3.,  0., nan])"
       ]
      },
-     "execution_count": 268,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -991,7 +991,7 @@
        "[8 rows x 21 columns]"
       ]
      },
-     "execution_count": 271,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1103,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1112,7 +1112,7 @@
        "Text(0.5, 0, 'Price Range')"
       ]
      },
-     "execution_count": 274,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1146,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1190,16 +1190,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/carlosg/opt/anaconda3/lib/python3.9/site-packages/seaborn/distributions.py:2619: FutureWarning: `distplot` is a deprecated function and will be removed in a future version. Please adapt your code to use either `displot` (a figure-level function with similar flexibility) or `histplot` (an axes-level function for histograms).\n",
+      "  warnings.warn(msg, FutureWarning)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "<AxesSubplot:xlabel='price_range'>"
       ]
      },
-     "execution_count": 259,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
