final changes to lecture and plotting

--- a/Fall_2022_Lectures/Lecture_8/Lecture 8 Final.ipynb
+++ b/Fall_2022_Lectures/Lecture_8/Lecture 8 Final.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
-    "%matplotlib inline"
+    "%matplotlib inline "
    ]
   },
   {
@@ -220,6 +220,60 @@
     "(If you're interested in how we derived this equation, you can find it at the end of this lesson.)\n",
     "\n",
     "It turns out that the inverse in the equation above is sometimes hard or even impossible to compute (what would be some cases where it's impossible?). As a result, even though linear regression has a closed form solution, sometimes an algorithm like gradient descent (covered later) is used to find the optimal values of $\\beta$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Derivation of Ordinary Least Squares\n",
+    "\n",
+    "\n",
+    "***Before we jump into OLS, a little bit of notation:***\n",
+    "\n",
+    "Let:\n",
+    "\n",
+    "$$ A = \\begin{bmatrix} 3\\\\ -4\\\\ 5\\end{bmatrix}$$\n",
+    "\n",
+    "Then the L1 Norm of A is:\n",
+    "\n",
+    "$$ \\Vert A \\Vert_1 = |3| + |-4| + |5| = 12$$\n",
+    "\n",
+    "And the L2 Norm Squared of A is:\n",
+    "\n",
+    "$$ \\Vert A \\Vert_2^2 = A^TA = (3)^2 + (-4)^2 + (5)^2 = 50$$\n",
+    "\n",
+    "---\n",
+    "\n",
+    "We can use OLS to minimize the sum of squared residuals:\n",
+    "\n",
+    "$$\\hat{\\beta}_{OLS} = \\underset{\\beta}{\\operatorname{argmin}} \\Vert X\\beta - y\\Vert_2^2$$\n",
+    "\n",
+    "Now how do we minimize this expression? Let us define our objective, [or cost function](https://stats.stackexchange.com/questions/179026/objective-function-cost-function-loss-function-are-they-the-same-thing), as:\n",
+    "\n",
+    "$$ L(\\beta) = \\sum_{i=1}^{n}(y_i - x_i^T\\beta)^2 = \\Vert X\\beta - y\\Vert_2^2$$\n",
+    "\n",
+    "First just rewrite this expression and FOIL.\n",
+    "\n",
+    "$$ L(\\beta) = (X\\beta - y)^T(X\\beta - y)$$\n",
+    "\n",
+    "$$ = (X\\beta)^T(X\\beta) - (X\\beta)^Ty - y^TX\\beta + y^Ty $$\n",
+    "\n",
+    "$$ = \\beta^TX^TX\\beta - 2\\beta^TX^Ty + y^Ty$$\n",
+    "\n",
+    "It can be proven that our objective function $L(\\beta)$ is convex. This means that any critical point is a global minimum. So throwback to AP Calculus, what can we do?\n",
+    "\n",
+    "$$ \\nabla_\\beta L(\\beta) = \\nabla_\\beta (\\beta^TX^TX\\beta - 2\\beta^TX^Ty + y^Ty)$$\n",
+    "\n",
+    "$$ = \\nabla_\\beta(\\beta^TX^TX\\beta) - 2\\nabla_\\beta(\\beta^TX^Ty) + \\nabla_\\beta(y^Ty)$$\n",
+    "\n",
+    "$$ = 2X^TX\\beta - 2X^Ty = 0$$\n",
+    "\n",
+    "Thus,\n",
+    "\n",
+    "$$ X^TX\\hat{\\beta}_{OLS} = X^Ty$$\n",
+    "\n",
+    "$$ \\hat{\\beta}_{OLS} = (X^TX)^{-1}X^Ty$$"
    ]
   },
   {
@@ -1231,7 +1285,7 @@
  "metadata": {
   "deepnote_notebook_id": "99fe6afa-f2a4-4b48-8b1b-233ed8a51629",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1245,7 +1299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
