--- a/Fall_2022_Lectures/Lecture_8/Lecture 8 Final.ipynb
+++ b/Fall_2022_Lectures/Lecture_8/Lecture 8 Final.ipynb
@@ -545,7 +545,7 @@
     "linear_loss = mean_squared_error(y_validation, linear_prediction)\n",
     "lin_r2 = r2_score(y_validation, linear_prediction)\n",
     "\n",
-    "print(\"Root Mean Squared Error of Linear Model: {:.2f}\".format(linear_loss))\n",
+    "print(\"Mean Squared Error of Linear Model: {:.2f}\".format(linear_loss))\n",
     "print(\"R2 of Linear Model: {:.2f}\".format(lin_r2))"
    ]
   },
@@ -603,8 +603,8 @@
     "ridge_loss = mean_squared_error(y_validation, ridge_prediction)\n",
     "ridge_r2 = r2_score(y_validation, ridge_prediction)\n",
     "\n",
-    "print(\"Root Mean Squared Error of Linear Model: {:.2f}\".format(linear_loss))\n",
-    "print(\"Root Mean Squared Error of Ridge Model: {:.2f}\".format(ridge_loss))\n",
+    "print(\"Mean Squared Error of Linear Model: {:.2f}\".format(linear_loss))\n",
+    "print(\"Mean Squared Error of Ridge Model: {:.2f}\".format(ridge_loss))\n",
     "print(\"R2 of Linear Model: {:.2f}\".format(lin_r2))\n",
     "print(\"R2 of Ridge Model: {:.2f}\".format(ridge_r2))"
    ]
@@ -863,9 +863,9 @@
     "lasso_r2 = r2_score(y_validation, lasso_prediction)\n",
     "\n",
     "\n",
-    "print(\"Root Mean Squared Error of Linear Model: {:.2f}\".format(linear_loss))\n",
-    "print(\"Root Mean Squared Error of Ridge Model: {:.2f}\".format(ridge_loss))\n",
-    "print(\"Root Mean Squared Error of LASSO Model: {:.2f}\".format(lasso_loss))\n",
+    "print(\"Mean Squared Error of Linear Model: {:.2f}\".format(linear_loss))\n",
+    "print(\"Mean Squared Error of Ridge Model: {:.2f}\".format(ridge_loss))\n",
+    "print(\"Mean Squared Error of LASSO Model: {:.2f}\".format(lasso_loss))\n",
     "print(\"R2 of Linear Model: {:.2f}\".format(lin_r2))\n",
     "print(\"R2 of Ridge Model: {:.2f}\".format(ridge_r2))\n",
     "print(\"R2 of Lasso Model: {:.2f}\".format(lasso_r2))"
@@ -926,7 +926,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see, both **Ridge Regression and LASSO Regression** minimized the loss of our linear regression models, so maybe penalizing some features allowed us to prevent overfitting on our dataset!"
+    "As we can see, currently the **LASSO Regression** does not have a great mse values due to the poor lambda values, but using **LASSO and Ridge**, we want to minimized the tloss of our linear regression models, so maybe penalizing some features allowed us to prevent overfitting on our dataset!"
    ]
   },
   {
