rearranged gamma to be below poisson processes

--- a/DS_Workshops/Advanced_Distributions/Advanced Distributions.ipynb
+++ b/DS_Workshops/Advanced_Distributions/Advanced Distributions.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25bfa9c5",
+   "id": "dd5313d5",
    "metadata": {},
    "source": [
     "## Table of Contents\n",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ce6253c",
+   "id": "0299905f",
    "metadata": {},
    "source": [
     "#### Survival Function\n",
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0eeff9f",
+   "id": "07b9ee06",
    "metadata": {},
    "source": [
     "<a id='normal'></a>\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8e74877a",
+   "id": "169693d1",
    "metadata": {
     "scrolled": false
    },
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d2645cf",
+   "id": "4b5fe0b2",
    "metadata": {},
    "source": [
     "One convenient characteristic of the normal distribution is the 68 - 95 - 99.7 rule.\n",
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "18233f71",
+   "id": "b14a4296",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6eff1480",
+   "id": "18d10f58",
    "metadata": {},
    "source": [
     "Now, let's test out the 68-95-99.7 rule:"
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "be4b5bc6",
+   "id": "9ae32752",
    "metadata": {},
    "outputs": [
     {
@@ -336,70 +336,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "0757c64b",
-   "metadata": {},
-   "source": [
-    "<a id='gamma'></a>\n",
-    "## Gamma Distribution\n",
-    "\n",
-    "Next, we will explore the Gamma Distribution.\n",
-    "\n",
-    "### Gamma Distribution Overview\n",
-    "\n",
-    "The Gamma Distribution is another distribution with many applications. Similar to the exponential distribution, the gamma distribution is relevant to modeling wait times for independent events occuring at a constant average rate. While the exponential distribution helps model the wait time for a single event to occur, the gamma distribution can help model the wait time until some number of events occur. This means that the exponential distribution is a special case of the gamma distribution, which we will see later.\n",
-    "\n",
-    "### Gamma Distribution PDF\n",
-    "\n",
-    "A random variable X that follows a $Gamma(r, \\lambda)$ distribution has the following probability density function (PDF):  \n",
-    "\n",
-    "$$\n",
-    "f_X(x) ~ = ~ \\frac{\\lambda^r}{\\Gamma(r)} x^{r-1}e^{-\\lambda x}, ~~~~~ x \\ge 0\n",
-    "$$\n",
-    "\n",
-    "### Gamma Function\n",
-    "\n",
-    "You may notice a strange function $\\Gamma(r)$ present in the gamma distribution PDF. This function is called the gamma function and is equal to the following:\n",
-    "\n",
-    "$$\n",
-    "\\Gamma(r) ~ = ~ \\int_0^\\infty x^{r-1}e^{-x} dx\n",
-    "$$\n",
-    "\n",
-    "The gamma function has applications to various realms of mathematics and statistics. It can be thought of as an extension of the factorial function to the real number domain. In fact, for any positive integer input, $\\Gamma(r) ~ = ~ (r-1)!$  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9a93779d",
-   "metadata": {},
-   "source": [
-    "### Gamma Distribution Parameters\n",
-    "\n",
-    "Looking back at the gamma distribution PDF, there are two parameters that define the distribution, r and $\\lambda$. Both parameters must be positive.\n",
-    "\n",
-    "#### Shape Parameter\n",
-    "r is considered the shape parameter. We noted earlier that an important application of this distribution is the wait time until some number of independent events occurs. The shape parameter is equal to the number of events we are waiting to occur in this example.\n",
-    "\n",
-    "#### Scale Parameter\n",
-    "$\\lambda$ is considered the scale parameter. The scale parameter is equal to the average rate at which events occur."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "165aad28",
-   "metadata": {},
-   "source": [
-    "### Expectation and Variance:\n",
-    "\n",
-    "$$E[X] = \\frac{r}{\\lambda}$$\n",
-    "\n",
-    "$$Var(X) = \\frac{r}{\\lambda^2}$$"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "203bbe7c",
+   "id": "f43bf41f",
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "654500dd",
+   "id": "fac044b1",
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2861478",
+   "id": "32c6eafe",
    "metadata": {},
    "source": [
     "### Special Cases of the Gamma Distribution\n",
@@ -694,7 +633,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "196aaede",
+   "id": "155edd85",
    "metadata": {},
    "source": [
     "The CDF function for the exponential is very similar: **stats.expon.cdf(x, loc=0, scale=1)**"
@@ -801,6 +740,7 @@
     "If we let $T_k$ be the arrival time for the $k$th arrival for a Poisson process $PP(\\lambda)$, then the PDF for an Erlang distribution is\n",
     "$$f_{T_k}(t) = \\frac{\\lambda^k t^{k-1} e^{-\\lambda t}}{(k-1)!}$$\n",
     "The CDF is \n",
+    "$$1 - \\sum_{n=0}^{k-1} \\frac{1}{n!} e^{-\\lambda x} (\\lambda x)^n$$\n",
     "\n",
     "#### Expectation and Variance:\n",
     "For $X \\sim Erlang(k;\\lambda)$,\n",
@@ -811,7 +751,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3db4db0",
+   "id": "c36e5833",
    "metadata": {},
    "source": [
     "Scipy's PDF function for the Erlang distribution is **stats.erlang.pdf(x, a, loc=0, scale=1)**. x is the the arrival time (t in our PDF above) and a is which arrival we're interested in (kth arrival; k in our PDF above). loc and scale are the same as before: loc is how much we are shifting by and scale =$\\frac{1}{\\lambda}$."
@@ -905,7 +845,68 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95c868c0",
+   "id": "243ca9e6",
+   "metadata": {},
+   "source": [
+    "<a id='gamma'></a>\n",
+    "## Gamma Distribution\n",
+    "\n",
+    "Next, we will explore the Gamma Distribution.\n",
+    "\n",
+    "### Gamma Distribution Overview\n",
+    "\n",
+    "The Gamma Distribution is another distribution with many applications. Similar to the exponential distribution, the gamma distribution is relevant to modeling wait times for independent events occuring at a constant average rate. While the exponential distribution helps model the wait time for a single event to occur, the gamma distribution can help model the wait time until some number of events occur. This means that the exponential distribution is a special case of the gamma distribution, which we will see later.\n",
+    "\n",
+    "### Gamma Distribution PDF\n",
+    "\n",
+    "A random variable X that follows a $Gamma(r, \\lambda)$ distribution has the following probability density function (PDF):  \n",
+    "\n",
+    "$$\n",
+    "f_X(x) ~ = ~ \\frac{\\lambda^r}{\\Gamma(r)} x^{r-1}e^{-\\lambda x}, ~~~~~ x \\ge 0\n",
+    "$$\n",
+    "\n",
+    "### Gamma Function\n",
+    "\n",
+    "You may notice a strange function $\\Gamma(r)$ present in the gamma distribution PDF. This function is called the gamma function and is equal to the following:\n",
+    "\n",
+    "$$\n",
+    "\\Gamma(r) ~ = ~ \\int_0^\\infty x^{r-1}e^{-x} dx\n",
+    "$$\n",
+    "\n",
+    "The gamma function has applications to various realms of mathematics and statistics. It can be thought of as an extension of the factorial function to the real number domain. In fact, for any positive integer input, $\\Gamma(r) ~ = ~ (r-1)!$  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c42aca5",
+   "metadata": {},
+   "source": [
+    "### Gamma Distribution Parameters\n",
+    "\n",
+    "Looking back at the gamma distribution PDF, there are two parameters that define the distribution, r and $\\lambda$. Both parameters must be positive.\n",
+    "\n",
+    "#### Shape Parameter\n",
+    "r is considered the shape parameter. We noted earlier that an important application of this distribution is the wait time until some number of independent events occurs. The shape parameter is equal to the number of events we are waiting to occur in this example.\n",
+    "\n",
+    "#### Scale Parameter\n",
+    "$\\lambda$ is considered the scale parameter. The scale parameter is equal to the average rate at which events occur."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80234ce2",
+   "metadata": {},
+   "source": [
+    "### Expectation and Variance:\n",
+    "\n",
+    "$$E[X] = \\frac{r}{\\lambda}$$\n",
+    "\n",
+    "$$Var(X) = \\frac{r}{\\lambda^2}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a09414c",
    "metadata": {},
    "source": [
     "<a id='chi'></a>\n",
@@ -942,7 +943,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b587eeeb",
+   "id": "b7940dde",
    "metadata": {},
    "outputs": [
     {
@@ -975,7 +976,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7dacaa9",
+   "id": "9f5dd7ff",
    "metadata": {},
    "source": [
     "<a id='beta'></a>\n",
@@ -1012,7 +1013,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e670c27b",
+   "id": "89a6cd7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1033,7 +1034,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bed73046",
+   "id": "c075ebd7",
    "metadata": {},
    "outputs": [],
    "source": [
