--- a/Fall_2022_Lectures/Lecture_8/Lecture 8 Final (1).ipynb
+++ b/Fall_2022_Lectures/Lecture_8/Lecture 8 Final (1).ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1284,7 +1284,7 @@
  "metadata": {
   "deepnote_notebook_id": "99fe6afa-f2a4-4b48-8b1b-233ed8a51629",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1298,7 +1298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
